--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 # JDBC connection properties
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/certificates
+jdbc.url=jdbc:mysql://localhost:3306/certificates?useSSL=false&serverTimezone=UTC
 jdbc.user=root
 jdbc.password=root
 
