--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Generate test data for DB  -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
