--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/certificate3?useSSL=false&serv
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
-
+#
+# Hibernate logging level
+#
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+#Set active profiles
+#
+spring.profiles.active=dev
+#`db_pop` for create test db data
