Fix minor bugs, refactor code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # Datasource properties
 #
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/certificate3?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/certificates?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
